--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.28.0
-pandas==2.1.0
-scikit-learn==1.3.0
-plotly==5.17.0
-numpy==1.24.3
+streamlit
+pandas
+scikit-learn
+plotly
+numpy
